--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,160 +1,242 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 h1 {
-    margin-bottom: 10px;
+  margin-top: 50px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-size: 175%;
 }
 
 p {
-    font-family: Arial, Helvetica, sans-serif;
-    border: 1px solid black;
-    background-color:gray;
-    width: 90%;
-    height: 150px;
-    margin-right: 0px;
-    margin-left: 0px;
+  margin-top: 40px;
+  background-color: gray;
+  width: 100%;
+  height: 220px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 125%;
+  color: black;
+  margin-left: 10px;
+  margin-right: 10px;
+  border: 1px solid black;
+  padding-left: 10px;
+  padding-right: 10px;  
+  padding-top: 40px;
+  overflow: auto;
+}
+
+#p1{
+  width: auto;
+}
+
+#p2{
+  width: auto;
+}
+
+#p3{
+  width: auto;
+}
+
+#p4{
+  background-color: pink;
+  top: 0;
+  right: 0;
+  width: 100px;
+  height: 30px;
+  position: absolute;
+  text-align: center;
+  padding-top: 2px; 
+  font-weight: bold; 
+  color: black;
+}
+
+#p5{
+  background-color: red;
+  top: 0;
+  right: 0;
+  width: 90px;
+  height: 30px;
+  position: absolute;
+  padding-top: 2px;  
+  text-align: center;
+  font-weight: bold;
+  color: white;
+}
+
+#p6{
+  background-color: orange;
+  /*top: 0;
+  right: 0;*/
+  width: 90px;
+  height: 30px;
+  position: absolute;
+  padding-top: 2px;  
+  text-align: center;
+  font-weight: bold;
+  color: black;
 }
 
 .row {
-    width: 100%;
+  width: 100%;
 }
 
-
-/*Desktop version */
+/* Desktop Version */
 @media (min-width: 992px) {
-    .col-lg-1, .col-lg-2, .col-lg-3 .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12{
-        float: left;
-        border: 1px solid green;
-    }
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+   
+  }
+  #p6{
+    top : 0;
+    right: 0;
+  }
 
-    .col-lg-1 {
-        width: 8.33%;
-      }
-      .col-lg-2 {
-        width: 16.66%;
-      }
-      .col-lg-3 {
-        width: 25%;
-      }
-      .col-lg-4 {
-        margin: auto;
-        width: 33.33%;
-      }
-      .col-lg-5 {
-        width: 41.66%;
-      }
-      .col-lg-6 {
-        width: 50%;
-      }
-      .col-lg-7 {
-        width: 58.33%;
-      }
-      .col-lg-8 {
-        width: 66.66%;
-      }
-      .col-lg-9 {
-        width: 74.99%;
-      }
-      .col-lg-10 {
-        width: 83.33%;
-      }
-      .col-lg-11 {
-        width: 91.66%;
-      }
-      .col-lg-12 {
-        width: 100%;
-      }
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    position: relative;
+    width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
 }
 
-
-/*Tablet version */
+/* Tablet Version */
 @media (min-width: 768px) and (max-width: 991px) {
-    .col-md-1, .col-md-2, .col-md-3 .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12{
-        float: left;
-        border: 1px solid green;
-    }
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    float: left;
+    position: relative;
+  }
+  #p3{
+    padding-top: 60px;
+    margin-top: 10px;
+  }
 
+  #p6{
+    right:0;
+    margin-top: 10px; 
+  }
 
-    .col-md-1 {
-        width: 8.33%;
-      }
-      .col-md-2 {
-        width: 16.66%;
-      }
-      .col-md-3 {
-        width: 25%;
-      }
-      .col-md-4 {
-        width: 33.33%;
-      }
-      .col-md-5 {
-        width: 41.66%;
-      }
-      .col-md-6 {
-        width: 50%;
-      }
-      .col-md-7 {
-        width: 58.33%;
-      }
-      .col-md-8 {
-        width: 66.66%;
-      }
-      .col-md-9 {
-        width: 74.99%;
-      }
-      .col-md-10 {
-        width: 83.33%;
-      }
-      .col-md-11 {
-        width: 91.66%;
-      }
-      .col-md-12 {
-        width: 100%;
-      }
+  #div1{
+    width: 100% ;
+  }
 
+  .col-md-1 {
+    position: relative;
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
 }
 
-/*Mobile version */
+
+/* Mobile Version */
 @media (max-width: 767px) {
-    .col-sd-1, .col-sd-2, .col-sd-3 .col-sd-4, .col-sd-5, .col-sd-6, .col-sd-7, .col-sd-8, .col-sd-9, .col-sd-10, .col-sd-11, .col-sd-12{
-        float: left;
-        border: 10px solid blue;
-    }
-    .col-sd-1 {
-        width: 8.33%;
-      }
-      .col-sd-2 {
-        width: 16.66%;
-      }
-      .col-sd-3 {
-        width: 25%;
-      }
-      .col-sd-4 {
-        width: 33.33%;
-      }
-      .col-sd-5 {
-        width: 41.66%;
-      }
-      .col-sd-6 {
-        width: 50%;
-      }
-      .col-sd-7 {
-        width: 58.33%;
-      }
-      .col-sd-8 {
-        width: 66.66%;
-      }
-      .col-sd-9 {
-        width: 74.99%;
-      }
-      .col-sd-10 {
-        width: 83.33%;
-      }
-      .col-sd-11 {
-        width: 91.66%;
-      }
-      .col-sd-12 {
-        width: 100%;
-      }
+  .col-sd-1, .col-sd-2, .col-sd-3, .col-sd-4, .col-sd-5, .col-sd-6, .col-sd-7, .col-sd-8, .col-sd-9, .col-sd-10, .col-sd-11, .col-sd-12 {
+    float: left;
+    position: relative;
+  }
+  #p6{
+    top : 0;
+    right: 0;
+  }
+
+  .col-sd-1 {
+    width: 8.33%;
+  }
+  .col-sd-2 {
+    width: 16.66%;
+  }
+  .col-sd-3 {
+    width: 25%;
+  }
+  .col-sd-4 {
+    width: 33.33%;
+  }
+  .col-sd-5 {
+    width: 41.66%;
+  }
+  .col-sd-6 {
+    width: 50%;
+  }
+  .col-sd-7 {
+    width: 58.33%;
+  }
+  .col-sd-8 {
+    width: 66.66%;
+  }
+  .col-sd-9 {
+    width: 74.99%;
+  }
+  .col-sd-10 {
+    width: 83.33%;
+  }
+  .col-sd-11 {
+    width: 91.66%;
+  }
+  .col-sd-12 {
+    width: 100%;
+  }
 }
