--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -3,6 +3,7 @@
 }
 
 body{
+    margin-top: 100px;
     background-color: rgb(212, 235, 245);
     font-size: 16px;
     color: black;
@@ -56,7 +57,7 @@ h2{
 }
 
 p{
-    height: 70%;
+    height: 80%;
     overflow: auto;
     margin-top: 40px;
     position: absolute;
