--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -28,7 +28,7 @@ body{
     color: black;
     text-transform: uppercase;
     margin-top: 0px;   
-    text-shadow: .5px .5px .5px rgb(226, 157, 211);
+    text-shadow: .10px .10px .10px rgb(226, 157, 211);
     /*font-size: 5vw;*/
     
 }
@@ -61,9 +61,8 @@ p{
     height: 80%;
     overflow: auto;
     margin-top: 40px;
-    position: absolute;
-    
-    
+    position: absolute; 
+    padding-top: 10px;
 }
 
 .divbody{
